fixing the more info section gap and heading padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -582,6 +582,9 @@ video {
 .gap-8 {
   gap: 2rem;
 }
+.gap-10 {
+  gap: 2.5rem;
+}
 .border-2 {
   border-width: 2px;
 }
@@ -675,6 +678,12 @@ video {
 }
 .pb-8 {
   padding-bottom: 2rem;
+}
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+.pb-4 {
+  padding-bottom: 1rem;
 }
 .text-center {
   text-align: center;
